<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remote Multimedia</string>
    <string name="action_about">About</string>
    <string name="action_sleep">Sleep</string>
    <string name="action_find">Find server</string>
    <string name="title_activity_about">About</string>     
    <string name="Previous">Previous</string>
    <string name="Mute">Mute</string>
    <string name="PlayPause">PlayPause</string>
    <string name="VolUp">VolUp</string>
    <string name="Next">Next</string>
    <string name="VolDown">VolDown</string>
    <string name="Stop">Stop</string>
    <string name="Media">Media</string>
    <string name="Zoom">Zoom</string>
    <string name="Status">Status</string>
    <string name="empty"></string>
    <string name="server">Server</string>
    <string name="serverConfig">Server configuration</string>
    <string name="software">Software</string>
    <string name="universal">Universal</string>
    <string name="connected">Connected</string>
	<string name="not_connected">Not connected</string>
</resources>