<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.remotemultimedia.MainActivity" >

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_find"
        android:icon="@drawable/find"
        android:orderInCategory="85"
        android:showAsAction="ifRoom"
        android:title="@string/action_find"/>
    <item
        android:id="@+id/action_sleep"
        android:icon="@drawable/power"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/action_sleep"/>

</menu>